Added comment successfully

--- a/InternApplication/src/main/resources/templates/mentorAllocateTasks.html
+++ b/InternApplication/src/main/resources/templates/mentorAllocateTasks.html
@@ -50,7 +50,7 @@
 	<link th:href="@{'/css/Material+Icons.css'}" rel="stylesheet" type="text/css">
 	
 <style>
-
+/*WOW*/
 /*To add calendar ui*/
 
 .ui-datepicker {
